wordwrap fixed

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,10 +20,12 @@
   padding: 10px 0px 75px 0px;
   background-color: #FEFFF1;
   text-align: center;
-
 }
 .post_content{
   margin: 5px 15%;
+  word-wrap: break-word;
+  max-width: 80%;
+  max-height: 300px;
 }
 .profile_img{
   border: solid 2px #FD18FD;
@@ -37,7 +39,8 @@
 }
 ul{
   background-color: #FEFFF1;
-  padding: 0
+  padding: 0;
+
 }
 
 .logo{
